<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_aquarius_text_set"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        />
    <CheckBox
        android:id="@+id/paint_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_aquarius_change_paint_style_fill"
        />
    <CheckBox
        android:id="@+id/clip_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_aquarius_change_clip"
        />
    <CheckBox
        android:id="@+id/anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac_aquarius_anim"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_aquarius_wave_height_ratio"/>
        <EditText
            android:id="@+id/wave_height"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_aquarius_wave_duration"/>
        <EditText
            android:id="@+id/wave_duration"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_aquarius_wave_cycles"/>
        <EditText
            android:id="@+id/wave_cycles"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac_aquarius_water_level"/>
        <EditText
            android:id="@+id/water_level"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"/>
    </LinearLayout>



</LinearLayout>